[UPD] #58181 Edit log search no result

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/EditLog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/EditLog.cshtml
@@ -46,7 +46,7 @@
                     <li class="active"><a href="#fragment-1">@Translation.Get("Logg", Enums.TranslationSource.TextTranslation)</a></li>
                 </ul>    
                 <div class="tab-content">
-                    <div class="tab-pane tab-pane-border active" id="logtab">
+                    <div class="tab-pane tab-pane-border active editmode" id="logtab">
                             @Html.Partial("_CaseLogInput", Model) 
                     </div>
                 </div>
