--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/MailTemplate/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/MailTemplate/_Input.cshtml
@@ -387,6 +387,14 @@
                                 </tr>
                                 <tr>
                                     <td>
+                                        @Translation.Get("Registrerad av", Enums.TranslationSource.TextTranslation)
+                                    </td>
+                                    <td>
+                                        [#65]
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
                                         @Translation.Get("Senast uppdaterad av", Enums.TranslationSource.TextTranslation)
                                     </td>
                                     <td>
