[UPD] template prio bug & lognote

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -330,6 +330,7 @@
                         @Html.Hidden("CurLanguageId", SessionFacade.CurrentLanguageId)
                         @Html.Hidden("SelectedValueCarrier", "")
                         @Html.Hidden("CaseTemplate_WorkingGroup_Id", "")
+                        @Html.Hidden("CaseTemplate_Priority_Id", "")
                         @Html.Hidden("CaseTemplate_StateSecondary_Id", "")
                         @Html.Hidden("CaseTemplate_Department_Id", "")
                         @Html.Hidden("CaseTemplate_OU_Id", "")
