--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ProductArea/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ProductArea/_Input.cshtml
@@ -34,7 +34,25 @@
                                         @Translation.Get("Beskrivning", Enums.TranslationSource.TextTranslation)
                                     </td>
                                     <td>
-                                        @Html.TextAreaFor(model => model.ProductArea.Description, new { style = "width:600px; height:125px;", maxlength = "300" })
+                                        @Html.TextAreaFor(model => model.ProductArea.Description, new {style = "width:600px; height:125px;", maxlength = "300"})
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        @Translation.GetCoreTextTranslation("Ärendetyp")
+                                    </td>
+                                    <td>
+                                        <div id="divCaseType" class="btn-group">
+                                            <div class="btn" id="divBreadcrumbs_CaseType">@Model.ParentPath_CaseType</div>
+                                            <button class="btn dropdown-toggle" data-toggle="dropdown">
+                                                <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu">
+                                                <li><a href="#">@Translation.GetCoreTextTranslation("--")</a></li>
+                                                @Html.CaseTypeDropdownButtonString(Model.CaseTypes)
+                                            </ul>
+                                            <input type="hidden" id="CaseType_Id" name="CaseType_Id" value="@Model.CaseType_Id"/>
+                                        </div>
                                     </td>
                                 </tr>
                                 <tr>
@@ -201,6 +219,13 @@
     </div>
 </div>
 <script type="text/javascript">
+    
+    $('#divCaseType ul.dropdown-menu li a').click(function (e) {
+        e.preventDefault();
+        var val = $(this).attr('value');
+        $("#divBreadcrumbs_CaseType").text(getBreadcrumbs(this));
+        $("#CaseType_Id").val(val);
+    });
 
     $(function () {
         //        tableOptions.sortable = false;
