--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -98,7 +98,8 @@
             PersonsPhone:  "case__PersonsPhone",
             PlanDate: "case__PlanDate",
             WatchDate: "case__WatchDate",
-            log_InternalText: "CaseLog_TextInternal"
+            log_InternalText: "CaseLog_TextInternal",
+            CaseRelationType: "CaseRelationType"
         },
 
         caseInitValues: {
@@ -118,6 +119,7 @@
             PlanDate:  '@(Model.case_.PlanDate !=null ? Model.case_.PlanDate.Value.ToString() : "" )',
             WatchDate:   '@(Model.case_.WatchDate !=null ? Model.case_.WatchDate.Value.ToString() : "" )',
             PriorityId: '@Model.case_.Priority_Id',
+            CaseRelationType: '@Model.CaseRelationType()',
         },
 
         casesScopeInitParameters: {
@@ -351,6 +353,9 @@
 
                         @Html.HiddenFor(model => Model.CaseLock.LockGUID)
                         @Html.HiddenFor(model => Model.CaseLock.ActiveTab)
+
+                        @Html.Hidden("CaseRelationType", Model.CaseRelationType())
+
                         @*<input type="button" id="sla_test" value="SLA Test" onclick="CalcSLA();" />*@
                         @if (Model.IsItChildCase())
                         {
