#58169 [FIX] Fixed bug with overflow, unsure why overflow: hidden!important was set but it hid the "Standard text"-drop down so it had to be removed.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/custom/dynamic-cases.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/custom/dynamic-cases.css
@@ -1,6 +1,8 @@
-﻿.tab-content {
+﻿
+/*
+.tab-content {
     overflow: hidden !important;
-}
+}*/
 
 #dh-form-area.tab-pane-border {
     padding: 0px !important;
