--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -3975,7 +3975,7 @@ td > div.checkbox.commun {
 }
 
 ul.nav.dh-nav .newcase {
-    font-size: 40px;
+    /*font-size: 40px;*/
     color: white;
     text-align: center;
     height: 25px;
