--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -223,7 +223,7 @@
                                                         @Translation.Get("Ärendemall för underärende", Enums.TranslationSource.TextTranslation)
                                                     </td>
                                                     <td>
-                                                        @Html.DropDownListFor(model => model.CaseSolution.SplitToCaseSolution_Id, Model.SplitToCaseSolutions.Select(o => new SelectListItem() { Text = o.Name + (o.CaseSolutionCategory == null ? "" : " " + o.CaseSolutionCategory.Name), Value = o.Id.ToString() }).ToList(), "")
+                                                        @Html.DropDownListFor(model => model.CaseSolution.SplitToCaseSolution_Id, Model.SplitToCaseSolutions.Select(o => new SelectListItem() { Text = o.Name + (o.CaseSolutionCategory == null ? "" : " - " + o.CaseSolutionCategory.Name), Value = o.Id.ToString() }).ToList(), "")
                                                     </td>
                                                 </tr>
                                                 <tr>
