[ADD]  new report param

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Shared/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Shared/Index.cshtml
@@ -55,6 +55,9 @@
 
 @Scripts.Render("~/bundles/report")
 
+<script type="text/javascript" src="@Url.Content("~/Areas/Reports/Content/js/reportViewer.logic.js")"></script>
+<script type="text/javascript" src="@Url.Content("~/Areas/Reports/Content/js/reports.js")"></script>
+
 <script type="text/javascript">
     var scope;
 
